# fastapi-tutorial

./: Makefile  pyproject.toml
fastapi_tutorial/: main.py
fastapi_tutorial/database/: database.py
liquibase/: liquibase.properties
tests/database/: crud_test.py
